--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -615,7 +615,7 @@ const contactInfo = getContactInfo();
         submitData.append('_captcha', 'false');
         submitData.append('_template', 'table');
         
-        const response = await fetch('https://formsubmit.co/mail@arnabdey.dev', {
+        const response = await fetch('https://formsubmit.co/138567a5fea18e8938aa5dfa0a81019e', {
           method: 'POST',
           body: submitData
         });
